Fix review comments
and add some `final`'s